--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -45,7 +45,8 @@
 .post__icons-one{
     display: flex;
     justify-content: space-between;
-    width:6em;
+    width:8em;
+
 }
 
 .post__likes,
@@ -53,6 +54,11 @@
     margin-top: .4em;
     margin-left: 1em;
     font-size: 13px;
+}
+
+.post__caption{
+    overflow-wrap: break-word;
+    padding: 0 .8em 0 0;
 }
 
 .post__user-name--margin{
